--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ github_username:  awocallaghan
 facebook_username:
 
 # Build settings
+gems: ['jekyll-paginate']
 markdown: kramdown
 highlighter: pygments
 permalink: pretty
