Some SEO changes

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Alex O'Callaghan
 header-img: img/home-bg.jpg
 email: aocallaghan@outlook.com
-description: "Personal website & blog of Alex O'Callaghan"
+description: "Personal website, portfolio, and blog of software developer Alex O'Callaghan"
 baseurl: ""
 url: "http://alexocallaghan.com"
 twitter_username: alexocallaghan
