--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ defaults:
 # Build settings
 gems: ['jekyll-paginate']
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 permalink: pretty
 paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
