--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt": "~0.4.5",
     "grunt-babel": "^6.0.0",
     "grunt-banner": "~0.2.3",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-less": "~0.11.4",
     "grunt-contrib-uglify": "~0.5.1",
     "grunt-contrib-watch": "~0.6.1"
