Template restructuring, new header images, added Google PageSpeed blog pos

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Alex O'Callaghan
-header-img: img/home-bg.jpg
+header-img: img/sky-lights-space-dark.jpg
 email: aocallaghan@outlook.com
 description: "Personal website, portfolio, and blog of software developer Alex O'Callaghan"
 baseurl: ""
