--- a/package.json
+++ b/package.json
@@ -5,21 +5,44 @@
   "homepage": "http://alexocallaghan.com",
   "author": "Alex O'Callaghan",
   "license": {
-    "type": "Apache 2.0",
-    "url": "https://github.com/IronSummitMedia/startbootstrap/blob/gh-pages/LICENSE"
+    "type": "Apache 2.0"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
     "grunt": "~0.4.5",
     "grunt-babel": "^6.0.0",
     "grunt-banner": "~0.2.3",
+    "grunt-browserify": "^5.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-less": "~0.11.4",
     "grunt-contrib-uglify": "~0.5.1",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-vueify": "^1.0.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-batch": "^1.0.5",
+    "gulp-clean-css": "^3.4.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-less": "^3.3.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^4.3.11",
+    "pump": "^1.0.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "vueify": "^9.4.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/IronSummitMedia/startbootstrap-clean-blog-jekyll.git"
+    "url": "https://github.com/awocallaghan/awocallaghan.github.io.git"
+  },
+  "dependencies": {
+    "gulp": "^3.9.1",
+    "maths-problems": "^1.0.3",
+    "vue": "^2.3.3"
   }
 }
