--- a/_config.yml
+++ b/_config.yml
@@ -28,4 +28,4 @@ markdown: kramdown
 highlighter: rouge
 permalink: pretty
 paginate: 5
-exclude: ["LICENSE","less","node_modules","Gruntfile.js","package.json","README.md",".babelrc","js/bootstrap.min.js","js/clean-blog.js","js/clean-blog.min.js","js/jquery.js","js/jquery.min.js","js/tether.min.js","js/projects.js","js/projects.dist.js","js/projects.dist.js.map"]
+exclude: ["LICENSE","node_modules","Gruntfile.js","Gulpfile.js","package.json","README.md",".babelrc",".gitignore","less","css/vendor","css/site","js/vendor","js/site","js/maths-problems"]
