--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ header-img: /img/sky-lights-space-dark.jpg
 email: aocallaghan@outlook.com
 description: "Personal website, portfolio, and blog of software developer Alex O'Callaghan"
 baseurl: ""
-url: "http://alexocallaghan.com"
+url: "//alexocallaghan.com"
 twitter_username: alexocallaghan
 github_username:  awocallaghan
 facebook_username:
