--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ email: aocallaghan@outlook.com
 description: "Personal website, portfolio, and blog of software developer Alex O'Callaghan"
 baseurl: ""
 url: "//alexocallaghan.com"
+plainurl: "alexocallaghan.com"
 twitter_username: alexocallaghan
 github_username:  awocallaghan
 facebook_username:
