--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Alex O'Callaghan
 header-img: /img/sky-lights-space-dark.jpg
 email: aocallaghan@outlook.com
 description: "Personal website, portfolio, and blog of software developer Alex O'Callaghan"
-baseurl: ""
+baseurl: "/no-async-css"
 url: "//alexocallaghan.com"
 secureurl: "https://alexocallaghan.com"
 twitter_username: alexocallaghan
